--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/differential-operation.html
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/differential-operation.html
@@ -3,6 +3,49 @@
 <head>
   <script th:src="@{/js/scripts.js}" type="text/javascript"></script>
   <title>Diff</title>
+  <style>
+    body{
+      font-family: Tahoma, sans-serif;
+    }
+    .modalAnother {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: #2e2e2e;
+      border-radius: 30px;
+      padding: 20px;
+      border: 1px solid black;
+      display: none;
+      z-index: 1001;
+    }
+
+    .modal-overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      display: none; /* По умолчанию скрыт */
+      z-index: 1000;
+    }
+
+    #modalSave {
+      display: none;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: #1b40f8;
+      padding: 20px;
+      border: 1px solid #ccc;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Тень для модального окна */
+      width: 400px; /* Устанавливаем фиксированную ширину */
+      z-index: 1001;
+    }
+
+  </style>
 </head>
 <body>
 
@@ -32,6 +75,36 @@
   <button onclick="openSave('diff')" th:attr="disabled=${diffFunc == null}">Сохранить</button>
   <button onclick="openFunctionList('diff')">Загрузить</button>
   <button onclick="openAnother('differential-operation','diff')">Открыть</button>
+</div>
+
+<h3>Результат</h3>
+<div id="resultContent">
+  <div th:if="${resultDiffFunc != null}">
+    <h4>Таблица функции:</h4>
+    <table border="1">
+      <thead>
+      <tr>
+        <th>X</th>
+        <th>Y</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr th:each="i : ${#numbers.sequence(0, countOfResultDiff - 1)}">
+        <td><input type="number" th:value="${resultDiffFunc.getXValues()[i]}" ></td>
+        <td><input type="number" th:value="${resultDiffFunc.getYValues()[i]}" ></td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+  <div th:if="${resultDiffFunc == null}">
+    <p>Отсутствует функция</p>
+  </div>
+  <div>
+    <form action="/differential-operation/doDiff" method="post">
+      <button type="submit" th:attr="disabled=${diffFunc == null}">Выполнить</button>
+    </form>
+  </div>
+  <button onclick="openSave('result')" th:attr="disabled=${resultDiffFunc == null}">Сохранить</button>
 </div>
 
 <div id="modalFunction" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background: white; padding: 20px; border: 1px solid black;">
@@ -74,11 +147,13 @@
   <button onclick="closeSave()">Закрыть</button>
 </div>
 
-<div id="modalAnother" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background: white; padding: 20px; border: 1px solid black;">
+<div id="modalAnother" class="modalAnother">
   <div id="modalContentAnother">
   </div>
-  <button onclick="closeAnother()">Закрыть</button>
 </div>
+
+<!-- Overlay для всех модальных окон -->
+<div id="modalOverlay" class="modal-overlay"></div>
 
 <div th:if="${showError}">
   <div th:replace="fragments/errorForm"></div>
