--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/home.html
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/home.html
@@ -10,10 +10,9 @@
 <ul>
     <li><a href="/tabulated-operations">Простейшие операции над функциями</a></li>
     <li><a href="/differential-operation">Дифференцирование функций</a></li>
-    <li><a href="#">Высчитать интеграл</a></li>
+    <li><a href="/integral">Высчитать интеграл</a></li>
     <li><a href="#">График</a></li>
     <li><a href="#">Создание сложной функции</a></li>
-    <li><a href="#">Настройки фабрики</a></li>
 </ul>
 
 <dialog id="settingsModal">
