--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/fragments/errorForm.html
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/fragments/errorForm.html
@@ -8,5 +8,6 @@
 <script>
     function closeModal() {
         document.getElementById("errorForm").style.display = "none";
+        window.location.href = window.location.pathname;
     }
 </script>
