--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/home.html
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/home.html
@@ -11,7 +11,7 @@
     <li><a href="/tabulated-operations">Простейшие операции над функциями</a></li>
     <li><a href="/differential-operation">Дифференцирование функций</a></li>
     <li><a href="/integral">Высчитать интеграл</a></li>
-    <li><a href="#">График</a></li>
+    <li><a href="/graph">График</a></li>
     <li><a href="#">Создание сложной функции</a></li>
 </ul>
 
