--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/fragments/tableForm.html
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/fragments/tableForm.html
@@ -1,5 +1,5 @@
 <div>
-    <form id="createFunctionForm">
+    <form id="createFunctionForm" action="/tabulated-operations/createFunction" method="post">
         <input type="hidden" name="target" th:value="${target}" id="targetField">
         <input type="hidden" name="redirectTarget" th:value="${redirectTarget}" id="redirectTargetField">
         <p th:text="${target}"></p>
@@ -13,7 +13,7 @@
                 <td><input type="number" name="y" step="0.01"/></td>
             </tr>
         </table>
-        <button onclick="create()">Создать пупу</button>
+        <button type="submit">Создать пупу</button>
     </form>
 </div>
 
