--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/differential-operation.html
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/differential-operation.html
@@ -45,6 +45,20 @@
       z-index: 1001;
     }
 
+    #modalEdit {
+      display: none;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: #1b40f8;
+      padding: 20px;
+      border: 1px solid #ccc;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Тень для модального окна */
+      width: 400px; /* Устанавливаем фиксированную ширину */
+      z-index: 1001;
+    }
+
   </style>
 </head>
 <body>
@@ -75,6 +89,7 @@
   <button onclick="openSave('diff')" th:attr="disabled=${diffFunc == null}">Сохранить</button>
   <button onclick="openFunctionList('diff')">Загрузить</button>
   <button onclick="openAnother('differential-operation','diff')">Открыть</button>
+  <button onclick="openEdit('diff','differential-operation')" th:attr="disabled=${diffFunc == null}">Вставить или изменить</button>
 </div>
 
 <h3>Результат</h3>
@@ -150,6 +165,19 @@
 <div id="modalAnother" class="modalAnother">
   <div id="modalContentAnother">
   </div>
+</div>
+
+<div id="modalEdit">
+  <div id="modalEditContent">
+    <form onsubmit="editFunc(event)">
+      <label for="xValue">Какую точку изменить:</label>
+      <input type="number" name="xValue" id="xValue" required>
+      <label for="yValue">На что изменить</label>
+      <input type="number" name="yValue" id="yValue" required>
+      <button type="submit">Cохранить</button>
+    </form>
+  </div>
+  <button onclick="closeEdit()">Закрыть</button>
 </div>
 
 <!-- Overlay для всех модальных окон -->
