--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/home.html
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/home.html
@@ -3,18 +3,252 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Главное меню</title>
+    <style>
+        .main-container {
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+            padding: 8px;
+        }
+
+        /* Верхняя строка */
+        .top-row {
+            display: grid;
+            grid-template-columns: 35% 35% 30%; /* Соотношение ширины столбцов */
+            gap: 8px;
+            grid-template-rows: 300px;
+        }
+
+        /* Нижняя строка */
+        .bottom-row {
+            display: grid;
+            grid-template-columns: 40% 30% 30%; /* Другое соотношение ширины столбцов */
+            gap: 8px;
+            grid-template-rows: 300px;
+        }
+
+        /* Общие стили для ячеек */
+        .top-row > div, .bottom-row > div {
+            position: relative;
+            background-color: #f0f0f0;
+            padding: 8px;
+            text-align: left;
+            border-radius: 10px;
+        }
+
+        /* Секция "Базовые операции над функциями" */
+        #basic-operations {
+            background-color: #ffe6f0;
+            padding-left: 40px;
+            text-align: left;
+            padding-top: 70px;
+            font-family: Tahoma, sans-serif;
+            font-size: 28px;
+            font-weight: bold;
+            border-radius: 25px;
+
+        }
+
+        #basic-operations button {
+            background-color: #ff66b3;
+            color: white;
+            width: 135px;
+            height: 45px;
+            font-size: 18px;
+            font-weight: bold;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 25px;
+            cursor: pointer;
+            position: absolute;         /* Абсолютное позиционирование */
+            bottom: 70px;               /* Отступ снизу */
+            right: 70px; /* Отступ справа */
+            transition: background-color 0.3s ease;
+        }
+
+        .basic-operations button:hover {
+            background-color: #e45ba0;
+        }
+
+        /* Секция "Создание сложной функции" */
+        #complex-function {
+            background-color: #ffe0b3;
+            padding-left: 40px;
+            text-align: left;
+            padding-top: 70px;
+            font-family: Tahoma, sans-serif;
+            font-size: 28px;
+            font-weight: bold;
+            border-radius: 25px;
+        }
+
+        #complex-function button {
+            background-color: #ff9933;
+            color: white;
+            width: 135px;
+            height: 45px;
+            font-size: 18px;
+            font-weight: bold;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 25px;
+            cursor: pointer;
+            position: absolute;         /* Абсолютное позиционирование */
+            bottom: 70px;               /* Отступ снизу */
+            right: 70px;
+            transition: background-color 0.3s ease;
+        }
+
+        .complex-function button:hover {
+            background-color: #df872d;
+        }
+
+        /* Секция "Построение графика" */
+        #plot-graph {
+            background-color: #ffe6f0;
+            padding-left: 40px;
+            text-align: left;
+            padding-top: 70px;
+            font-family: Tahoma, sans-serif;
+            font-size: 28px;
+            font-weight: bold;
+            border-radius: 25px;
+        }
+
+        #plot-graph button {
+            background-color: #ff66b3;
+            color: white;
+            width: 135px;
+            height: 45px;
+            font-size: 18px;
+            font-weight: bold;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 25px;
+            cursor: pointer;
+            position: absolute;         /* Абсолютное позиционирование */
+            bottom: 70px;               /* Отступ снизу */
+            right: 70px;
+            transition: background-color 0.3s ease;
+        }
+
+        .plot-graph button:hover {
+            background-color: #e45ba0;
+        }
+
+        /* Секция "Дифференцирование функции" */
+        #differentiate-function {
+            padding-left: 40px;
+            text-align: left;
+            padding-top: 70px;
+            font-family: Tahoma, sans-serif;
+            font-size: 28px;
+            font-weight: bold;
+            border-radius: 25px;
+        }
+
+        #differentiate-function button {
+            background-color: #ccff66;
+            color: black;
+            width: 135px;
+            height: 45px;
+            font-size: 18px;
+            font-weight: bold;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 25px;
+            cursor: pointer;
+            position: absolute;         /* Абсолютное позиционирование */
+            bottom: 70px;               /* Отступ снизу */
+            right: 70px;
+            transition: background-color 0.3s ease;
+        }
+
+        .differentiate-function button:hover {
+            background-color: #c4e65a;
+        }
+
+        /* Секция "Вычислить интеграл" */
+        #compute-integral {
+            background-color: #ffe6f0;
+            padding-left: 40px;
+            text-align: left;
+            padding-top: 70px;
+            font-family: Tahoma, sans-serif;
+            font-size: 28px;
+            font-weight: bold;
+            border-radius: 25px;
+        }
+
+        #compute-integral button {
+            background-color: #ff66b3;
+            color: white;
+            width: 135px;
+            height: 45px;
+            font-size: 18px;
+            font-weight: bold;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 25px;
+            cursor: pointer;
+            position: absolute;         /* Абсолютное позиционирование */
+            bottom: 70px;               /* Отступ снизу */
+            right: 70px;
+            transition: background-color 0.3s ease;
+        }
+
+        .calculate-integral button:hover {
+            background-color: #e45ba0;
+        }
+
+        /* Секция "Настройки фабрики" */
+        #factory-settings {
+            background-color: #f4ffcc;
+            padding-left: 40px;
+            text-align: left;
+            padding-top: 70px;
+            font-family: Tahoma, sans-serif;
+            font-size: 28px;
+            font-weight: bold;
+            border-radius: 25px;
+        }
+
+        #factory-settings button {
+            background-color: #ccff66;
+            color: black;
+            width: 135px;
+            height: 45px;
+            font-size: 18px;
+            font-weight: bold;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 25px;
+            cursor: pointer;
+            position: absolute;         /* Абсолютное позиционирование */
+            bottom: 70px;               /* Отступ снизу */
+            right: 70px;
+            transition: background-color 0.3s ease;
+        }
+
+        .factory-settings button:hover {
+            background-color: #c4e65a;
+        }
+
+    </style>
 </head>
 <body>
-<h1>Главное меню</h1>
-<ul>
-    <li><a href="/tabulated-operations">Простейшие операции над функциями</a></li>
-    <li><a href="/differential-operation">Дифференцирование функций</a></li>
-    <li><a href="/integral">Высчитать интеграл</a></li>
-    <li><a href="/graph">График</a></li>
-    <li><a href="#">Создание сложной функции</a></li>
-</ul>
-
+<div class="main-container">
+    <div class="top-row">
+        <div class="basic-operations" id="basic-operations">Базовые операции <br> над функциями <button>Создать</button></div>
+        <div class="complex-function" id="complex-function">Создание сложной <br> функции <button>Создать</button></div>
+        <div class="plot-graph" id="plot-graph">Построение <br> графика <button>Построить</button></div>
+    </div>
+    <div class="bottom-row">
+        <div class="differentiate-function" id="differentiate-function">Дифференцирование <br> функции <button>Открыть</button></div>
+        <div class="calculate-integral" id="compute-integral">Вычислить <br> интеграл <button>Открыть</button></div>
+        <div class="factory-settings" id="factory-settings">Настройки <br> фабрики <button>Изменить</button></div>
+    </div>
+</div>
 <dialog id="settingsModal">
     <form action="/settings" method="post">
         <label for="factoryType">Выберите фабрику:</label>
