--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/tabulated-operations.html
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/tabulated-operations.html
@@ -18,6 +18,8 @@
             border: 1px solid black;
             display: none;
             z-index: 1001;
+            width: 380px;
+            height: 440px;
         }
 
         .modal-overlay {
