--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/differential-operation.html
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/differential-operation.html
@@ -59,6 +59,20 @@
       z-index: 1001;
     }
 
+    #modalRemove {
+      display: none;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: #1b40f8;
+      padding: 20px;
+      border: 1px solid #ccc;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Тень для модального окна */
+      width: 400px; /* Устанавливаем фиксированную ширину */
+      z-index: 1001;
+    }
+
   </style>
 </head>
 <body>
@@ -90,6 +104,7 @@
   <button onclick="openFunctionList('diff')">Загрузить</button>
   <button onclick="openAnother('differential-operation','diff')">Открыть</button>
   <button onclick="openEdit('diff','differential-operation')" th:attr="disabled=${diffFunc == null}">Вставить или изменить</button>
+  <button onclick="openRemove('diff','differential-operation')" th:attr="disabled=${diffFunc == null or countOfDiff == 2 }">Удалить точку</button>
 </div>
 
 <h3>Результат</h3>
@@ -178,6 +193,17 @@
     </form>
   </div>
   <button onclick="closeEdit()">Закрыть</button>
+</div>
+
+<div id="modalRemove">
+  <div id="modalRemoveContent">
+    <form onsubmit="removeFunc(event)">
+      <label for="xToRemove">Какую точку изменить:</label>
+      <input type="number" name="xValue" id="xToRemove" required>
+      <button type="submit">Cохранить</button>
+    </form>
+  </div>
+  <button onclick="closeRemove()">Закрыть</button>
 </div>
 
 <!-- Overlay для всех модальных окон -->
