--- a/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/home.html
+++ b/SHAMAN_JUNIOR-LAB2/src/main/resources/templates/home.html
@@ -66,7 +66,7 @@
             transition: background-color 0.3s ease;
         }
 
-        .basic-operations button:hover {
+        #basic-operations button:hover {
             background-color: #e45ba0;
         }
 
@@ -99,7 +99,7 @@
             transition: background-color 0.3s ease;
         }
 
-        .complex-function button:hover {
+        #complex-function button:hover {
             background-color: #df872d;
         }
 
@@ -132,7 +132,7 @@
             transition: background-color 0.3s ease;
         }
 
-        .plot-graph button:hover {
+        #plot-graph button:hover {
             background-color: #e45ba0;
         }
 
@@ -165,7 +165,7 @@
             transition: background-color 0.3s ease;
         }
 
-        .differentiate-function button:hover {
+        #differentiate-function button:hover {
             background-color: #c4e65a;
         }
 
@@ -198,7 +198,7 @@
             transition: background-color 0.3s ease;
         }
 
-        .calculate-integral button:hover {
+        #calculate-integral button:hover {
             background-color: #e45ba0;
         }
 
@@ -231,7 +231,7 @@
             transition: background-color 0.3s ease;
         }
 
-        .factory-settings button:hover {
+        #factory-settings button:hover {
             background-color: #c4e65a;
         }
 
